.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Component_History__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Committed_By_Username__c</fullName>
        <label>Committed By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Committed_By__c</fullName>
        <formula>IF(true, CreatedBy.FirstName  +&apos; &apos;+  CreatedBy.LastName, Flosum__External_Committed_By__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Committed_On__c</fullName>
        <formula>CreatedDate</formula>
        <label>Committed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Component__c</fullName>
        <label>Component</label>
        <referenceTo>Flosum__Component__c</referenceTo>
        <relationshipLabel>Component History</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__External_Committed_By__c</fullName>
        <label>External Committed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__SHA__c</fullName>
        <label>SHA</label>
        <length>82</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Sync_Status__c</fullName>
        <label>Sync Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Version_Name__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.Flosum__Credentials__c.Flosum__Namespace__c + &apos;viewmetadata?id=&apos; + Id , TEXT(Flosum__Version__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__isLastVersion__c</fullName>
        <formula>IF( Flosum__Component__r.Flosum__Version__c =  Flosum__Version__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isLastVersion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__isReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Component History</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Component History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>